--- a/export/template/HANRU/Views/ZXJX/TKLX/Edit.cshtml
+++ b/export/template/HANRU/Views/ZXJX/TKLX/Edit.cshtml
@@ -1,4 +1,4 @@
-@model HanRuEdu.LDAL.EDU_ELE_04_TKLXSJ
+@model HanRuEdu.LDAL.EDU_ZXJX_09_A02_TKLX
 @using (Html.BeginForm())
 {
     @Html.Partial("SingleZTree")
@@ -37,7 +37,7 @@
 
         </table>
         <br />
-        @{ ViewData["ce_cancel"] = Url.Content("~/jpxt/tklxsj/index");}
+        @{ ViewData["ce_cancel"] = Url.Content("~/jpxt/tklx/index");}
         @Html.Partial("~/views/shared/CreateEditToolBarPage.cshtml", this.ViewData)
     </div>
 }
