--- a/export/template/HANRU/Views/ZZJX/TKLX/Index.cshtml
+++ b/export/template/HANRU/Views/ZZJX/TKLX/Index.cshtml
@@ -1,6 +1,6 @@
-@model HanRuEdu.LDAL.EDU_ELE_04_TKLXSJ
+@model HanRuEdu.LDAL.EDU_ZZJX_08_A02_TKLX
 <table id="dg" title="  " class="easyui-datagrid" style="width:900px;height:500px"
-            data-options="singleSelect:false,collapsible:true,  url:'@Url.Content("~/jpxt/TKLXSJ/index_jsonstr")',
+            data-options="singleSelect:false,collapsible:true,  url:'@Url.Content("~/jpxt/TKLX/index_jsonstr")',
             toolbar:'#toolbar', remoteSort:true,pagination:true, rownumbers:true, fitColumns:true,multiSort:true" >
     <thead>
         <tr>
@@ -12,11 +12,11 @@
     </thead>
 </table>
 @{
-    ViewData["index_create"] = Url.Content("~/jpxt/tklxsj/create");
-    ViewData["index_edit"] = Url.Content("~/jpxt/tklxsj/edit");
-    //ViewData["index_detail"] = Url.Content("~/jpxt/tklxsj/details");
-    //ViewData["index_del"] = Url.Content("~/jpxt/tklxsj/delete");
-    ViewData["index_multi_del"] = Url.Content("~/jpxt/tklxsj/delete");
+    ViewData["index_create"] = Url.Content("~/jpxt/tklx/create");
+    ViewData["index_edit"] = Url.Content("~/jpxt/tklx/edit");
+    //ViewData["index_detail"] = Url.Content("~/jpxt/tklx/details");
+    //ViewData["index_del"] = Url.Content("~/jpxt/tklx/delete");
+    ViewData["index_multi_del"] = Url.Content("~/jpxt/tklx/delete");
     ViewData["index_id_name"] = "ID";
     //ViewData["index_outdata"] = Url.Content("~/zsgl/xsdj/OutExcel");
     //ViewData["index_indata"] = Url.Content("~/zsgl/xsdj/ImportData");
