--- a/export/template/HANRU/Views/ELE/JC/Edit.cshtml
+++ b/export/template/HANRU/Views/ELE/JC/Edit.cshtml
@@ -1,4 +1,4 @@
-@model HanRuEdu.LDAL.EDU_ELE_05_XQ
+@model HanRuEdu.LDAL.EDU_ELE_05_JC
 @using (Html.BeginForm())
 {
     @Html.Partial("SingleZTree")
@@ -37,7 +37,7 @@
 
         </table>
         <br />
-        @{ ViewData["ce_cancel"] = Url.Content("~/jpxt/xq/index");}
+        @{ ViewData["ce_cancel"] = Url.Content("~/jpxt/jc/index");}
         @Html.Partial("~/views/shared/CreateEditToolBarPage.cshtml", this.ViewData)
     </div>
 }
