--- a/export/template/HANRU/Views/ZXJX/TKSQSJ/Edit.cshtml
+++ b/export/template/HANRU/Views/ZXJX/TKSQSJ/Edit.cshtml
@@ -70,7 +70,7 @@
             <tr>
                 <td> @Html.LabelFor(m => m.TKQXQ) </td> <!--调课前星期-->
                 <td>
-                    @Html.DropDownListFor(m => m.TKQXQ, ViewBag.ZJ_XQLst as SelectList)
+                    @Html.TextBoxFor(m => m.TKQXQ, new { @class = "easyui-validatebox", style = "width:150px; " })
                     @Html.ValidationMessageFor(m => m.TKQXQ)
                 </td>
             </tr>
@@ -78,7 +78,7 @@
             <tr>
                 <td> @Html.LabelFor(m => m.TKQSD) </td> <!--调课前时段-->
                 <td>
-                    @Html.DropDownListFor(m => m.TKQSD, ViewBag.ZJ_SDLst as SelectList)
+                    @Html.TextBoxFor(m => m.TKQSD, new { @class = "easyui-validatebox", style = "width:150px; " })
                     @Html.ValidationMessageFor(m => m.TKQSD)
                 </td>
             </tr>
@@ -86,7 +86,7 @@
             <tr>
                 <td> @Html.LabelFor(m => m.TKQJC) </td> <!--调课前节次-->
                 <td>
-                    @Html.DropDownListFor(m => m.TKQJC, ViewBag.ZJ_JCLst as SelectList)
+                    @Html.TextBoxFor(m => m.TKQJC, new { @class = "easyui-validatebox", style = "width:150px; " })
                     @Html.ValidationMessageFor(m => m.TKQJC)
                 </td>
             </tr>
@@ -110,7 +110,7 @@
             <tr>
                 <td> @Html.LabelFor(m => m.TKHXQ) </td> <!--调课后星期-->
                 <td>
-                    @Html.DropDownListFor(m => m.TKHXQ, ViewBag.ZJ_XQLst as SelectList)
+                    @Html.TextBoxFor(m => m.TKHXQ, new { @class = "easyui-validatebox", style = "width:150px; " })
                     @Html.ValidationMessageFor(m => m.TKHXQ)
                 </td>
             </tr>
@@ -118,7 +118,7 @@
             <tr>
                 <td> @Html.LabelFor(m => m.TKHSD) </td> <!--调课后时段-->
                 <td>
-                    @Html.DropDownListFor(m => m.TKHSD, ViewBag.ZJ_SDLst as SelectList)
+                    @Html.TextBoxFor(m => m.TKHSD, new { @class = "easyui-validatebox", style = "width:150px; " })
                     @Html.ValidationMessageFor(m => m.TKHSD)
                 </td>
             </tr>
@@ -126,7 +126,7 @@
             <tr>
                 <td> @Html.LabelFor(m => m.TKHJC) </td> <!--调课后节次-->
                 <td>
-                    @Html.DropDownListFor(m => m.TKHJC, ViewBag.ZJ_JCLst as SelectList)
+                    @Html.TextBoxFor(m => m.TKHJC, new { @class = "easyui-validatebox", style = "width:150px; " })
                     @Html.ValidationMessageFor(m => m.TKHJC)
                 </td>
             </tr>
