--- a/export/template/HANRU/Views/ELE/APP/Index.cshtml
+++ b/export/template/HANRU/Views/ELE/APP/Index.cshtml
@@ -13,6 +13,7 @@
             <th field="SM" width="50" sortable="true">@Html.LabelFor(m => m.SM)</th><!--说明-->
             <th field="DLFS" width="50" sortable="true">@Html.LabelFor(m => m.DLFS)</th><!--登录方式-->
             <th field="STATUS" width="50" sortable="true">@Html.LabelFor(m => m.STATUS)</th><!--应用状态-->
+            <th field="TYPE" width="50" sortable="true">@Html.LabelFor(m => m.TYPE)</th><!--应用类别-->
         </tr>
     </thead>
 </table>
