--- a/export/template/HANRU/Views/ELE/XQ/Edit.cshtml
+++ b/export/template/HANRU/Views/ELE/XQ/Edit.cshtml
@@ -1,4 +1,4 @@
-@model HanRuEdu.LDAL.EDU_ELE_05_XQ
+@model HanRuEdu.LDAL.EDU_ELE_01_XQ
 @using (Html.BeginForm())
 {
     @Html.Partial("SingleZTree")
@@ -28,10 +28,42 @@
             </tr>
 
             <tr>
-                <td> @Html.LabelFor(m => m.MC) </td> <!--名称-->
+                <td> @Html.LabelFor(m => m.XNID) </td> <!--学年-->
                 <td>
-                    @Html.TextBoxFor(m => m.MC, new { @class = "easyui-validatebox", style = "width:150px; " })
-                    @Html.ValidationMessageFor(m => m.MC)
+                    @Html.TextBoxFor(m => m.XNID, new { @class = "easyui-validatebox", style = "width:150px; " })
+                    @Html.ValidationMessageFor(m => m.XNID)
+                </td>
+            </tr>
+
+            <tr>
+                <td> @Html.LabelFor(m => m.XQM) </td> <!--学期码-->
+                <td>
+                    @Html.DropDownListFor(m => m.XQM, ViewBag.JY_XQLst as SelectList)
+                    @Html.ValidationMessageFor(m => m.XQM)
+                </td>
+            </tr>
+
+            <tr>
+                <td> @Html.LabelFor(m => m.XQMC) </td> <!--学期名称-->
+                <td>
+                    @Html.TextBoxFor(m => m.XQMC, new { @class = "easyui-validatebox", style = "width:150px; " })
+                    @Html.ValidationMessageFor(m => m.XQMC)
+                </td>
+            </tr>
+
+            <tr>
+                <td> @Html.LabelFor(m => m.XQKSRQ) </td> <!--学期开始日期-->
+                <td>
+                    @Html.TextBoxFor(m => m.XQKSRQ, new { @class = "easyui-validatebox", style = "width:150px; " })
+                    @Html.ValidationMessageFor(m => m.XQKSRQ)
+                </td>
+            </tr>
+
+            <tr>
+                <td> @Html.LabelFor(m => m.XQJSRQ) </td> <!--学期结束日期-->
+                <td>
+                    @Html.TextBoxFor(m => m.XQJSRQ, new { @class = "easyui-validatebox", style = "width:150px; " })
+                    @Html.ValidationMessageFor(m => m.XQJSRQ)
                 </td>
             </tr>
 
