--- a/export/template/HANRU/Views/ELE/XQ/Index.cshtml
+++ b/export/template/HANRU/Views/ELE/XQ/Index.cshtml
@@ -1,4 +1,4 @@
-@model HanRuEdu.LDAL.EDU_ELE_05_XQ
+@model HanRuEdu.LDAL.EDU_ELE_01_XQ
 <table id="dg" title="  " class="easyui-datagrid" style="width:900px;height:500px"
             data-options="singleSelect:false,collapsible:true,  url:'@Url.Content("~/jpxt/XQ/index_jsonstr")',
             toolbar:'#toolbar', remoteSort:true,pagination:true, rownumbers:true, fitColumns:true,multiSort:true" >
@@ -7,7 +7,11 @@
             <!--<th data-options="field:'ck',checkbox:true"></th>-->
             <th field="ID" width="50" sortable="true">@Html.LabelFor(m => m.ID)</th><!--编号-->
             <th field="SCHOOLID" width="50" sortable="true">@Html.LabelFor(m => m.SCHOOLID)</th><!--学校名-->
-            <th field="MC" width="50" sortable="true">@Html.LabelFor(m => m.MC)</th><!--名称-->
+            <th field="XNID" width="50" sortable="true">@Html.LabelFor(m => m.XNID)</th><!--学年-->
+            <th field="XQM" width="50" sortable="true">@Html.LabelFor(m => m.XQM)</th><!--学期码-->
+            <th field="XQMC" width="50" sortable="true">@Html.LabelFor(m => m.XQMC)</th><!--学期名称-->
+            <th field="XQKSRQ" width="50" sortable="true">@Html.LabelFor(m => m.XQKSRQ)</th><!--学期开始日期-->
+            <th field="XQJSRQ" width="50" sortable="true">@Html.LabelFor(m => m.XQJSRQ)</th><!--学期结束日期-->
         </tr>
     </thead>
 </table>
