--- a/export/template/HANRU/Views/ZZJX/TKSQSJ/Create.cshtml
+++ b/export/template/HANRU/Views/ZZJX/TKSQSJ/Create.cshtml
@@ -46,7 +46,7 @@
             <tr>
                 <td> @Html.LabelFor(m => m.TKLXID) </td> <!--µ÷¿ÎÀàÐÍID-->
                 <td>
-                    @Html.TextBoxFor(m => m.TKLXID, new { @class = "easyui-validatebox", style = "width:150px; " })
+                    @Html.DropDownListFor(m => m.TKLXID, ViewBag.ZJ_TKLXLst as SelectList)
                     @Html.ValidationMessageFor(m => m.TKLXID)
                 </td>
             </tr>
